# nvBuilder

./: README.md  config.yaml  newInstall.sh.version  nvBuilder.py  nvBuilder.sh  pcUtils.json  pyproject.toml  requirements.txt
nvbuilder/: __init__.py  __main__.py  archiver.py  bash_snippets.py  builder.py  colors.py  config.py  constants.py  encryptor.py  exceptions.py  extractor_template.sh  logging_setup.py  metadata.py  script_generator.py  utils.py
tests/: conftests.py  test_basic.py
